manifests/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: techaid-dashboard-svc
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: techaid-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: techaid-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techaid-dashboard
  template:
    metadata:
      labels:
        app: techaid-dashboard
    spec:
      imagePullSecrets:
        - name: gcr-regcred
      containers:
        - image: eu.gcr.io/retinue-io/techaid-dashboard
          name: techaid-dashboard
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 100
            timeoutSeconds: 5
